--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-FTP сервер сайта <a>Old-Soft.rf.gd</a>
+FTP сервер сайта <body>
+    <a href="http://Old-Soft.rf.gd">Old-Soft.rf.gd</a>
+    </body>
