--- a/index.html
+++ b/index.html
@@ -1,3 +1,41 @@
-FTP сервер сайта <body>
-    <a href="http://Old-Soft.rf.gd">Old-Soft.rf.gd</a>
-    </body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JustTea</title>
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/app.js" defer></script>
+    <script src="libs/rain.js" defer></script>
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+</head>
+<body>
+<section class="layers">
+    <div class="scroll">
+        <div class="layers__container">
+            <div class="layers__item layer-1" style="background-image: url(./img/layer-12.png);"></div>
+            <div class="layers__item layer-2" style="background-image: url(img/layer-2.png);"></div>
+            <div class="layers__item layer-3">
+                <div class="hero-content">
+                    <h1>JustTea </h1>
+                    <div class="hero-content__p">Сделано с ❤</div>
+                    <a href="#how-to-start" class="button-start">Начать играть</a>
+                </div>
+            </div>
+            <div class="layers__item layer-4"></div>
+            <div class="layers__item layer-5" style="background-image: url(img/layer-5.png);"></div>
+        </div>
+    </div>
+</section>
+<!-- How to Start Section -->
+<section id="how-to-start">
+    <h2>Как начать ИГРАТЬ?</h2>
+    <p></p>
+</section>
+<span></span>
+<span class="xtxt"></span>
+<span class="ytxt"></span>
+<span class="ztxt"></span>
+</body>
+</html>
