--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
 <!-- How to Start Section -->
 <section id="how-to-start">
     <h2>Как начать ИГРАТЬ?</h2>
-    <p></p>
+    <p>
+
+Для начала игры нужно скачать лаунчер. Мы рекомендуем официальный Minecraft лаунчер. После того, как скачаешь лаунчер, выбери для установки любую версию Minecraft с 1.8 до последней.
+
+После загрузки игры нажми на кнопку «Сетевая игра», затем на кнопку «Добавить сервер». В поле «Адрес сервера» укажи IP сервера — promo.mineland.net
+
+Ура, сервер добавлен! Осталось подключиться и получить СТАРТОВЫЙ БОНУС. Если возникнут какие-то трудности, техподдержка всегда поможет. Удачной игры!
+</p>
 </section>
 <span></span>
 <span class="xtxt"></span>
