--- a/index.html
+++ b/index.html
@@ -28,17 +28,28 @@
         </div>
     </div>
 </section>
-<!-- How to Start Section -->
-<section id="how-to-start">
-    <h2>Как начать ИГРАТЬ?</h2>
-    <p>
-Для начала игры нужно скачать лаунчер. Мы рекомендуем официальный Minecraft лаунчер. После того, как скачаешь лаунчер, выбери для установки любую версию Minecraft с 1.8 до последней.
-
-После загрузки игры нажми на кнопку «Сетевая игра», затем на кнопку «Добавить сервер». В поле «Адрес сервера» укажи IP сервера — promo.mineland.net
-
-Ура, сервер добавлен! Осталось подключиться и начать наслаждаться игрой. Если возникнут какие-то трудности, техподдержка всегда поможет. Удачной игры!
-</p>
-</section>
+<div class="section sectionStart" id="sectionStart">
+<div class="container">
+<h2>Как начать ИГРАТЬ?</h2>
+<div class="steps">
+<div data-number-steps="1">
+<p>Для начала игры нужно скачать лаунчер. Мы рекомендуем <a href="https://www.minecraft.net/ru-ru/download">официальный Minecraft лаунчер</a>. После того, как скачаешь лаунчер, выбери для установки любую версию Minecraft <b>с 1.8 до последней</b>.</p>
+</div>
+<div data-number-steps="2">
+<p>После загрузки игры нажми на кнопку <b>«Сетевая игра»</b>, затем на кнопку <b>«Добавить сервер»</b>. В поле <b>«Адрес сервера»</b> укажи IP сервера — <b></b></p>
+</div>
+<div data-number-steps="3">
+<p>Ура, сервер добавлен! Осталось подключиться и получить <b>Удовольствие</b> от игры. Если возникнут какие-то трудности, <a href="">техподдержка</a> всегда поможет. Удачной игры!</p>
+</div>
+</div>
+<div class="row bonus">
+<div class="col-12 col-md-8 text order-1 order-md-0">
+<h2>Стартовый бонус? ЧЕВО?</h2>
+<span>Чтобы получить СТАРТОВЫЙ БОНУС, пожалуйста, нажмите на кнопку ниже и вставьте скопированный секретный код в игровой чат после регистрации!</span>
+<button class="btn buttonBonus" onclick="if (!window.__cfRLUnblockHandlers) return false; ga('send', 'event', 'promo', 'click','bonus')" data-clipboard-text="/bonus" data-toggle="tooltip" data-placement="bottom" title="Команда скопирована!" style="width: 480px" data-cf-modified-c9e2cc020adf272153635faf->
+СКОПИРОВАТЬ СЕКРЕТНУЮ КОМАНДУ ✅
+</button>
+</div>
 <span></span>
 <span class="xtxt"></span>
 <span class="ytxt"></span>
