--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </div>
     </div>
 </section>
+<section>
 <div class="section sectionStart" id="sectionStart">
 <div class="container">
 <h2>Как начать ИГРАТЬ?</h2>
@@ -42,13 +43,8 @@
 <p>Ура, сервер добавлен! Осталось подключиться и получить <b>Удовольствие</b> от игры. Если возникнут какие-то трудности, <a href="">техподдержка</a> всегда поможет. Удачной игры!</p>
 </div>
 </div>
-<div class="row bonus">
 <div class="col-12 col-md-8 text order-1 order-md-0">
-<h2>Стартовый бонус? ЧЕВО?</h2>
-<span>Чтобы получить СТАРТОВЫЙ БОНУС, пожалуйста, нажмите на кнопку ниже и вставьте скопированный секретный код в игровой чат после регистрации!</span>
-<button class="btn buttonBonus" onclick="if (!window.__cfRLUnblockHandlers) return false; ga('send', 'event', 'promo', 'click','bonus')" data-clipboard-text="/bonus" data-toggle="tooltip" data-placement="bottom" title="Команда скопирована!" style="width: 480px" data-cf-modified-c9e2cc020adf272153635faf->
-СКОПИРОВАТЬ СЕКРЕТНУЮ КОМАНДУ ✅
-</button>
+</section>
 </div>
 <span></span>
 <span class="xtxt"></span>
