--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 </section>
-<section>
+<section id="how-to-start"></section>
 <h2>Как начать ИГРАТЬ?</h2>
 <p>Для начала игры нужно скачать лаунчер. Мы рекомендуем <a href="https://www.minecraft.net/ru-ru/download">официальный Minecraft лаунчер</a>. После того, как скачаешь лаунчер, выбери для установки любую версию Minecraft <b>с 1.8 до последней</b>.</p>
 <p>После загрузки игры нажми на кнопку <b>«Сетевая игра»</b>, затем на кнопку <b>«Добавить сервер»</b>. В поле <b>«Адрес сервера»</b> укажи IP сервера — <b></b></p>
